spec coverage for a model that is namespaced and a controller that is namespaced travis config / badge travis, code climate config hound config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,4 @@ rvm:
 env:
   - RSPEC_VERSION="<2.99"
   - RSPEC_VERSION="~>3.0
+  - CODECLIMATE_REPO_TOKEN=561cc65a0f136c90b4661c76c96e4ca0717d49a1336cb08d7a617f2cb7d4f6c6
